# VulkanModule

./: .gitignore  BUILD_PLATFORMS.md  CLAUDE.md  PROJECT_OVERVIEW.md  README.md
AddOns/: BufferBase.h  CommandBufferBase.h  Descriptors.cpp  Descriptors.h  Mipmaps.h  PrimitiveBuffer.cpp  PrimitiveBuffer.h  TextureImage.cpp  TextureImage.h  UniformBufferLiterals.h
AddOns/3DObjects/: MeshObject.h
AddOns/Renderables/: AddOns.cpp  AddOns.h  Customizer.h  DrawableSpecifier.h  DynamicRenderable.cpp  DynamicRenderable.h  FixedRenderable.cpp  FixedRenderable.h  iRenderable.h
AddOns/VertexTypes/: Vertex3DTypes.h  VertexAbstract.h  VertexAttribute.h  VertexDescription.h  VertexNull.h  VertexType.h  VertexTypes.cpp  VerticesDynamic.h
Adjunct/: BufferBase.h  Descriptors.cpp  Descriptors.h  DynamicUniformBuffer.cpp  DynamicUniformBuffer.h  Mipmaps.h  PrimitiveBuffer.cpp  TextureImage.cpp  TextureImage.h  UniformBuffer.cpp  UniformBuffer.h  UniformBufferLiterals.h
Adjunct/Renderables/: AddOns.cpp  AddOns.h  Customizer.h  DrawableSpecifier.h  DynamicRenderable.cpp  DynamicRenderable.h  FixedRenderable.cpp  FixedRenderable.h  MeshObject.h  ShaderCache.cpp  ShaderCache.h  iRenderable.h
Adjunct/ShadowMapping/: ShadowMap.cpp  ShadowMap.h  ShadowPass.cpp  ShadowPass.h
Adjunct/Shadowing/: ShadowMap.cpp  ShadowMap.h  ShadowMappingTypes.h  ShadowPass.cpp  ShadowPass.h  ShadowProjection.h  ShadowSystem.cpp  ShadowSystem.h
Adjunct/VertexTypes/: Vertex2D.h  Vertex2DColored.h  Vertex2DTextureTinted.h  Vertex2DTextured.h  Vertex2DTypes.h  VertexAbstract.h  VertexAttribute.h  VertexDescription.h  VertexNull.cpp  VertexTypes.cpp  VerticesDynamic.h
Assist/: DebugReport.cpp  DeviceAssessment.cpp  DeviceAssessment.h  DeviceProfile.h  DeviceRanking.cpp  GameClock.h  ValidationLayers.cpp  VulkanMath.h  VulkanPlatform.h  vkEnumStrings.cpp
Objects/: CommandObjects.cpp  CommandObjects.h  DepthBuffer.cpp  DepthBuffer.h  DeviceQueues.cpp  DeviceQueues.h  EventObjects.cpp  EventObjects.h  Framebuffers.cpp  Framebuffers.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsPipeline.cpp  GraphicsPipeline.h  ImageResource.cpp  ImageResource.h  RenderPass.cpp  RenderPass.h  Swapchain.cpp  Swapchain.h  SyncObjects.cpp  SyncObjects.h  VulkanInstance.cpp
Platform/: PlatformCommon.cpp  PlatformExtension.h  ReadMe.md  Universal.h
Platform/ControlScheme/: ControlStub.cpp  ControlStub.h  iControlScheme.h
Platform/FileSystem/: FileSystem.cpp  FileSystem.h  FileSystemSDL.h
Platform/GUISystem/: DearImGui.cpp  DearImGui.h  ReadMe.md  iGuiSystem.h  imgui.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h
Platform/GUISystem/replacements/: ReadMe.md  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
Platform/GUISystem/stubs/: imgui.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h
Platform/ImageHandling/: ImageSDL.h  ImageSTB.h  iImageSource.h  sdlEquivalents.h
Platform/Logger/: Logging.cpp  Logging.h  ReadMe.txt
Platform/OSAbstraction/: PlatformGLFW.cpp  PlatformGLFW.h  PlatformSDL.cpp  PlatformSDL.h  iPlatform.h
Setup/: RenderSettings.h  Shader.h  VulkanConfigure.h  VulkanSetup.cpp  VulkanSetup.h  VulkanSingleton.h
TestHarness/: CMakeLists.txt
TestHarness/include/: VulkanTester.h
TestHarness/src/: AppSettings.cpp  VulkanTester.cpp  main.cpp
